# snowflake

./: LICENSE  README.md  snowflake.cabal  stack.yaml
app/: Main.hs
src/: Snowflake.hs
test/: Test.hs
