name:                snowflake
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jiakai0419/snowflake#readme
license:             BSD3
license-file:        LICENSE
author:              KaiJia
maintainer:          jiakai0419@gmail.com
copyright:           Copyright: (c) 2016 KaiJia
category:            Demo
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snowflake
  build-depends:       base >= 4.7 && < 5
                     , microlens >= 0.4.7
                     , microlens-th >= 0.4.0
  default-language:    Haskell2010

executable snowflake-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snowflake
                     , time-exts
  default-language:    Haskell2010

test-suite snowflake-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snowflake
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jiakai0419/snowflake
